Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOLLAR_SIGN
    DOT
    MULTINOMIAL
    QUESTION
    TERMINAL

Grammar

Rule 0     S' -> rddl
Rule 1     rddl -> rddl_block
Rule 2     rddl_block -> rddl_block domain_block
Rule 3     rddl_block -> rddl_block instance_block
Rule 4     rddl_block -> rddl_block nonfluent_block
Rule 5     rddl_block -> empty
Rule 6     domain_block -> DOMAIN IDENT LCURLY req_section domain_list RCURLY
Rule 7     req_section -> REQUIREMENTS ASSIGN_EQUAL LCURLY string_list RCURLY SEMI
Rule 8     req_section -> REQUIREMENTS LCURLY string_list RCURLY SEMI
Rule 9     req_section -> empty
Rule 10    domain_list -> domain_list type_section
Rule 11    domain_list -> domain_list pvar_section
Rule 12    domain_list -> domain_list cpf_section
Rule 13    domain_list -> domain_list reward_section
Rule 14    domain_list -> domain_list termination_section
Rule 15    domain_list -> domain_list action_precond_section
Rule 16    domain_list -> domain_list state_action_constraint_section
Rule 17    domain_list -> domain_list state_invariant_section
Rule 18    domain_list -> empty
Rule 19    type_section -> TYPES LCURLY type_list RCURLY SEMI
Rule 20    type_list -> type_list type_def
Rule 21    type_list -> empty
Rule 22    type_def -> IDENT COLON OBJECT SEMI
Rule 23    type_def -> IDENT COLON LCURLY enum_list RCURLY SEMI
Rule 24    enum_list -> enum_list COMMA ENUM_VAL
Rule 25    enum_list -> ENUM_VAL
Rule 26    enum_list -> empty
Rule 27    pvar_section -> PVARIABLES LCURLY pvar_list RCURLY SEMI
Rule 28    pvar_list -> pvar_list pvar_def
Rule 29    pvar_list -> empty
Rule 30    pvar_def -> nonfluent_def
Rule 31    pvar_def -> statefluent_def
Rule 32    pvar_def -> actionfluent_def
Rule 33    pvar_def -> intermfluent_def
Rule 34    pvar_def -> derivedfluent_def
Rule 35    pvar_def -> observfluent_def
Rule 36    nonfluent_def -> IDENT param_list LCURLY NON_FLUENT COMMA type_spec COMMA DEFAULT ASSIGN_EQUAL range_const RCURLY SEMI
Rule 37    statefluent_def -> IDENT param_list LCURLY STATE COMMA type_spec COMMA DEFAULT ASSIGN_EQUAL range_const RCURLY SEMI
Rule 38    actionfluent_def -> IDENT param_list LCURLY ACTION COMMA type_spec COMMA DEFAULT ASSIGN_EQUAL range_const RCURLY SEMI
Rule 39    intermfluent_def -> IDENT param_list LCURLY INTERMEDIATE COMMA type_spec COMMA LEVEL ASSIGN_EQUAL range_const RCURLY SEMI
Rule 40    intermfluent_def -> IDENT param_list LCURLY INTERMEDIATE COMMA type_spec RCURLY SEMI
Rule 41    derivedfluent_def -> IDENT param_list LCURLY DERIVED_FLUENT COMMA type_spec COMMA LEVEL ASSIGN_EQUAL range_const RCURLY SEMI
Rule 42    derivedfluent_def -> IDENT param_list LCURLY DERIVED_FLUENT COMMA type_spec RCURLY SEMI
Rule 43    observfluent_def -> IDENT param_list LCURLY OBSERVATION COMMA type_spec RCURLY SEMI
Rule 44    cpf_section -> cpf_header LCURLY cpf_list RCURLY SEMI
Rule 45    cpf_header -> CPFS
Rule 46    cpf_header -> CDFS
Rule 47    cpf_list -> cpf_list cpf_def
Rule 48    cpf_list -> empty
Rule 49    cpf_def -> pvar_expr ASSIGN_EQUAL expr SEMI
Rule 50    reward_section -> REWARD ASSIGN_EQUAL expr SEMI
Rule 51    termination_section -> TERMINATION LCURLY termination_list RCURLY SEMI
Rule 52    termination_section -> TERMINATION LCURLY RCURLY SEMI
Rule 53    termination_list -> termination_list termination_cond_def
Rule 54    termination_list -> termination_cond_def
Rule 55    termination_cond_def -> expr SEMI
Rule 56    action_precond_section -> ACTION_PRECONDITIONS LCURLY action_precond_list RCURLY SEMI
Rule 57    action_precond_section -> ACTION_PRECONDITIONS LCURLY RCURLY SEMI
Rule 58    action_precond_list -> action_precond_list action_precond_def
Rule 59    action_precond_list -> action_precond_def
Rule 60    action_precond_def -> expr SEMI
Rule 61    state_action_constraint_section -> STATE_ACTION_CONSTRAINTS LCURLY state_cons_list RCURLY SEMI
Rule 62    state_action_constraint_section -> STATE_ACTION_CONSTRAINTS LCURLY RCURLY SEMI
Rule 63    state_cons_list -> state_cons_list state_cons_def
Rule 64    state_cons_list -> state_cons_def
Rule 65    state_cons_def -> expr SEMI
Rule 66    state_invariant_section -> STATE_INVARIANTS LCURLY state_invariant_list RCURLY SEMI
Rule 67    state_invariant_section -> STATE_INVARIANTS LCURLY RCURLY SEMI
Rule 68    state_invariant_list -> state_invariant_list state_invariant_def
Rule 69    state_invariant_list -> state_invariant_def
Rule 70    state_invariant_def -> expr SEMI
Rule 71    term_list -> term_list COMMA term
Rule 72    term_list -> term
Rule 73    term_list -> empty
Rule 74    term -> VAR
Rule 75    term -> ENUM_VAL
Rule 76    term -> pvar_expr
Rule 77    expr -> pvar_expr
Rule 78    expr -> group_expr
Rule 79    expr -> function_expr
Rule 80    expr -> relational_expr
Rule 81    expr -> boolean_expr
Rule 82    expr -> quantifier_expr
Rule 83    expr -> numerical_expr
Rule 84    expr -> aggregation_expr
Rule 85    expr -> control_expr
Rule 86    expr -> randomvar_expr
Rule 87    pvar_expr -> IDENT LPAREN term_list RPAREN
Rule 88    pvar_expr -> IDENT
Rule 89    group_expr -> LBRACK expr RBRACK
Rule 90    group_expr -> LPAREN expr RPAREN
Rule 91    function_expr -> IDENT LBRACK expr_list RBRACK
Rule 92    relational_expr -> expr COMP_EQUAL expr
Rule 93    relational_expr -> expr NEQ expr
Rule 94    relational_expr -> expr GREATER expr
Rule 95    relational_expr -> expr GREATEREQ expr
Rule 96    relational_expr -> expr LESS expr
Rule 97    relational_expr -> expr LESSEQ expr
Rule 98    boolean_expr -> expr AND expr
Rule 99    boolean_expr -> expr AMPERSAND expr
Rule 100   boolean_expr -> expr OR expr
Rule 101   boolean_expr -> expr IMPLY expr
Rule 102   boolean_expr -> expr EQUIV expr
Rule 103   boolean_expr -> NOT expr
Rule 104   boolean_expr -> bool_type
Rule 105   quantifier_expr -> FORALL UNDERSCORE LCURLY typed_var_list RCURLY expr
Rule 106   quantifier_expr -> EXISTS UNDERSCORE LCURLY typed_var_list RCURLY expr
Rule 107   numerical_expr -> expr PLUS expr
Rule 108   numerical_expr -> expr MINUS expr
Rule 109   numerical_expr -> expr TIMES expr
Rule 110   numerical_expr -> expr DIV expr
Rule 111   numerical_expr -> MINUS expr
Rule 112   numerical_expr -> PLUS expr
Rule 113   numerical_expr -> INTEGER
Rule 114   numerical_expr -> DOUBLE
Rule 115   aggregation_expr -> IDENT UNDERSCORE LCURLY typed_var_list RCURLY expr
Rule 116   control_expr -> IF LPAREN expr RPAREN THEN expr ELSE expr
Rule 117   control_expr -> SWITCH LPAREN term RPAREN LCURLY case_list RCURLY
Rule 118   randomvar_expr -> BERNOULLI LPAREN expr RPAREN
Rule 119   randomvar_expr -> DIRAC_DELTA LPAREN expr RPAREN
Rule 120   randomvar_expr -> KRON_DELTA LPAREN expr RPAREN
Rule 121   randomvar_expr -> UNIFORM LPAREN expr COMMA expr RPAREN
Rule 122   randomvar_expr -> NORMAL LPAREN expr COMMA expr RPAREN
Rule 123   randomvar_expr -> EXPONENTIAL LPAREN expr RPAREN
Rule 124   randomvar_expr -> DISCRETE LPAREN IDENT COMMA lconst_case_list RPAREN
Rule 125   randomvar_expr -> DIRICHLET LPAREN IDENT COMMA expr RPAREN
Rule 126   randomvar_expr -> POISSON LPAREN expr RPAREN
Rule 127   randomvar_expr -> WEIBULL LPAREN expr COMMA expr RPAREN
Rule 128   randomvar_expr -> GAMMA LPAREN expr COMMA expr RPAREN
Rule 129   typed_var_list -> typed_var_list COMMA typed_var
Rule 130   typed_var_list -> typed_var
Rule 131   typed_var -> VAR COLON IDENT
Rule 132   expr_list -> expr_list COMMA expr
Rule 133   expr_list -> expr
Rule 134   case_list -> case_list COMMA case_def
Rule 135   case_list -> case_def
Rule 136   case_def -> CASE term COLON expr
Rule 137   case_def -> DEFAULT COLON expr
Rule 138   lconst_case_list -> lconst COLON expr
Rule 139   lconst_case_list -> lconst COLON OTHERWISE
Rule 140   lconst_case_list -> lconst_case_list COMMA lconst COLON expr
Rule 141   lconst -> IDENT
Rule 142   lconst -> ENUM_VAL
Rule 143   param_list -> COLON
Rule 144   param_list -> LPAREN param_list2 RPAREN COLON
Rule 145   param_list2 -> type_spec
Rule 146   param_list2 -> param_list2 COMMA type_spec
Rule 147   type_spec -> IDENT
Rule 148   type_spec -> INT
Rule 149   type_spec -> REAL
Rule 150   type_spec -> BOOL
Rule 151   range_const -> bool_type
Rule 152   range_const -> double_type
Rule 153   range_const -> int_type
Rule 154   range_const -> IDENT
Rule 155   bool_type -> TRUE
Rule 156   bool_type -> FALSE
Rule 157   double_type -> DOUBLE
Rule 158   double_type -> MINUS DOUBLE
Rule 159   double_type -> POS_INF
Rule 160   double_type -> NEG_INF
Rule 161   int_type -> INTEGER
Rule 162   int_type -> MINUS INTEGER
Rule 163   pos_int_type_or_pos_inf -> INTEGER
Rule 164   pos_int_type_or_pos_inf -> POS_INF
Rule 165   instance_block -> INSTANCE IDENT LCURLY instance_list RCURLY
Rule 166   instance_list -> instance_list domain_section
Rule 167   instance_list -> instance_list nonfluents_section
Rule 168   instance_list -> instance_list objects_section
Rule 169   instance_list -> instance_list init_state_section
Rule 170   instance_list -> instance_list max_nondef_actions_section
Rule 171   instance_list -> instance_list horizon_spec_section
Rule 172   instance_list -> instance_list discount_section
Rule 173   instance_list -> empty
Rule 174   domain_section -> DOMAIN ASSIGN_EQUAL IDENT SEMI
Rule 175   nonfluents_section -> NON_FLUENTS ASSIGN_EQUAL IDENT SEMI
Rule 176   objects_section -> OBJECTS LCURLY objects_list RCURLY SEMI
Rule 177   init_state_section -> INIT_STATE LCURLY pvar_inst_list RCURLY SEMI
Rule 178   max_nondef_actions_section -> MAX_NONDEF_ACTIONS ASSIGN_EQUAL pos_int_type_or_pos_inf SEMI
Rule 179   horizon_spec_section -> HORIZON ASSIGN_EQUAL pos_int_type_or_pos_inf SEMI
Rule 180   horizon_spec_section -> HORIZON ASSIGN_EQUAL TERMINATE_WHEN LPAREN expr RPAREN
Rule 181   discount_section -> DISCOUNT ASSIGN_EQUAL DOUBLE SEMI
Rule 182   nonfluent_block -> NON_FLUENTS IDENT LCURLY nonfluent_list RCURLY
Rule 183   nonfluent_list -> nonfluent_list domain_section
Rule 184   nonfluent_list -> nonfluent_list objects_section
Rule 185   nonfluent_list -> nonfluent_list init_non_fluent_section
Rule 186   nonfluent_list -> empty
Rule 187   init_non_fluent_section -> NON_FLUENTS LCURLY pvar_inst_list RCURLY SEMI
Rule 188   objects_list -> objects_list objects_def
Rule 189   objects_list -> objects_def
Rule 190   objects_list -> empty
Rule 191   objects_def -> IDENT COLON LCURLY object_const_list RCURLY SEMI
Rule 192   object_const_list -> object_const_list COMMA IDENT
Rule 193   object_const_list -> IDENT
Rule 194   pvar_inst_list -> pvar_inst_list pvar_inst_def
Rule 195   pvar_inst_list -> pvar_inst_def
Rule 196   pvar_inst_def -> IDENT LPAREN lconst_list RPAREN SEMI
Rule 197   pvar_inst_def -> IDENT SEMI
Rule 198   pvar_inst_def -> NOT IDENT LPAREN lconst_list RPAREN SEMI
Rule 199   pvar_inst_def -> NOT IDENT SEMI
Rule 200   pvar_inst_def -> IDENT LPAREN lconst_list RPAREN ASSIGN_EQUAL range_const SEMI
Rule 201   pvar_inst_def -> IDENT ASSIGN_EQUAL range_const SEMI
Rule 202   lconst_list -> lconst_list COMMA lconst
Rule 203   lconst_list -> lconst
Rule 204   string_list -> string_list COMMA IDENT
Rule 205   string_list -> IDENT
Rule 206   string_list -> empty
Rule 207   empty -> <empty>

Terminals, with rules where they appear

ACTION               : 38
ACTION_PRECONDITIONS : 56 57
AMPERSAND            : 99
AND                  : 98
ASSIGN_EQUAL         : 7 36 37 38 39 41 49 50 174 175 178 179 180 181 200 201
BERNOULLI            : 118
BOOL                 : 150
CASE                 : 136
CDFS                 : 46
COLON                : 22 23 131 136 137 138 139 140 143 144 191
COMMA                : 24 36 36 37 37 38 38 39 39 40 41 41 42 43 71 121 122 124 125 127 128 129 132 134 140 146 192 202 204
COMP_EQUAL           : 92
CPFS                 : 45
DEFAULT              : 36 37 38 137
DERIVED_FLUENT       : 41 42
DIRAC_DELTA          : 119
DIRICHLET            : 125
DISCOUNT             : 181
DISCRETE             : 124
DIV                  : 110
DOLLAR_SIGN          : 
DOMAIN               : 6 174
DOT                  : 
DOUBLE               : 114 157 158 181
ELSE                 : 116
ENUM_VAL             : 24 25 75 142
EQUIV                : 102
EXISTS               : 106
EXPONENTIAL          : 123
FALSE                : 156
FORALL               : 105
GAMMA                : 128
GREATER              : 94
GREATEREQ            : 95
HORIZON              : 179 180
IDENT                : 6 22 23 36 37 38 39 40 41 42 43 87 88 91 115 124 125 131 141 147 154 165 174 175 182 191 192 193 196 197 198 199 200 201 204 205
IF                   : 116
IMPLY                : 101
INIT_STATE           : 177
INSTANCE             : 165
INT                  : 148
INTEGER              : 113 161 162 163
INTERMEDIATE         : 39 40
KRON_DELTA           : 120
LBRACK               : 89 91
LCURLY               : 6 7 8 19 23 27 36 37 38 39 40 41 42 43 44 51 52 56 57 61 62 66 67 105 106 115 117 165 176 177 182 187 191
LESS                 : 96
LESSEQ               : 97
LEVEL                : 39 41
LPAREN               : 87 90 116 117 118 119 120 121 122 123 124 125 126 127 128 144 180 196 198 200
MAX_NONDEF_ACTIONS   : 178
MINUS                : 108 111 158 162
MULTINOMIAL          : 
NEG_INF              : 160
NEQ                  : 93
NON_FLUENT           : 36
NON_FLUENTS          : 175 182 187
NORMAL               : 122
NOT                  : 103 198 199
OBJECT               : 22
OBJECTS              : 176
OBSERVATION          : 43
OR                   : 100
OTHERWISE            : 139
PLUS                 : 107 112
POISSON              : 126
POS_INF              : 159 164
PVARIABLES           : 27
QUESTION             : 
RBRACK               : 89 91
RCURLY               : 6 7 8 19 23 27 36 37 38 39 40 41 42 43 44 51 52 56 57 61 62 66 67 105 106 115 117 165 176 177 182 187 191
REAL                 : 149
REQUIREMENTS         : 7 8
REWARD               : 50
RPAREN               : 87 90 116 117 118 119 120 121 122 123 124 125 126 127 128 144 180 196 198 200
SEMI                 : 7 8 19 22 23 27 36 37 38 39 40 41 42 43 44 49 50 51 52 55 56 57 60 61 62 65 66 67 70 174 175 176 177 178 179 181 187 191 196 197 198 199 200 201
STATE                : 37
STATE_ACTION_CONSTRAINTS : 61 62
STATE_INVARIANTS     : 66 67
SWITCH               : 117
TERMINAL             : 
TERMINATE_WHEN       : 180
TERMINATION          : 51 52
THEN                 : 116
TIMES                : 109
TRUE                 : 155
TYPES                : 19
UNDERSCORE           : 105 106 115
UNIFORM              : 121
VAR                  : 74 131
WEIBULL              : 127
error                : 

Nonterminals, with rules where they appear

action_precond_def   : 58 59
action_precond_list  : 56 58
action_precond_section : 15
actionfluent_def     : 32
aggregation_expr     : 84
bool_type            : 104 151
boolean_expr         : 81
case_def             : 134 135
case_list            : 117 134
control_expr         : 85
cpf_def              : 47
cpf_header           : 44
cpf_list             : 44 47
cpf_section          : 12
derivedfluent_def    : 34
discount_section     : 172
domain_block         : 2
domain_list          : 6 10 11 12 13 14 15 16 17
domain_section       : 166 183
double_type          : 152
empty                : 5 9 18 21 26 29 48 73 173 186 190 206
enum_list            : 23 24
expr                 : 49 50 55 60 65 70 89 90 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 105 106 107 107 108 108 109 109 110 110 111 112 115 116 116 116 118 119 120 121 121 122 122 123 125 126 127 127 128 128 132 133 136 137 138 140 180
expr_list            : 91 132
function_expr        : 79
group_expr           : 78
horizon_spec_section : 171
init_non_fluent_section : 185
init_state_section   : 169
instance_block       : 3
instance_list        : 165 166 167 168 169 170 171 172
int_type             : 153
intermfluent_def     : 33
lconst               : 138 139 140 202 203
lconst_case_list     : 124 140
lconst_list          : 196 198 200 202
max_nondef_actions_section : 170
nonfluent_block      : 4
nonfluent_def        : 30
nonfluent_list       : 182 183 184 185
nonfluents_section   : 167
numerical_expr       : 83
object_const_list    : 191 192
objects_def          : 188 189
objects_list         : 176 188
objects_section      : 168 184
observfluent_def     : 35
param_list           : 36 37 38 39 40 41 42 43
param_list2          : 144 146
pos_int_type_or_pos_inf : 178 179
pvar_def             : 28
pvar_expr            : 49 76 77
pvar_inst_def        : 194 195
pvar_inst_list       : 177 187 194
pvar_list            : 27 28
pvar_section         : 11
quantifier_expr      : 82
randomvar_expr       : 86
range_const          : 36 37 38 39 41 200 201
rddl                 : 0
rddl_block           : 1 2 3 4
relational_expr      : 80
req_section          : 6
reward_section       : 13
state_action_constraint_section : 16
state_cons_def       : 63 64
state_cons_list      : 61 63
state_invariant_def  : 68 69
state_invariant_list : 66 68
state_invariant_section : 17
statefluent_def      : 31
string_list          : 7 8 204
term                 : 71 72 117 136
term_list            : 71 87
termination_cond_def : 53 54
termination_list     : 51 53
termination_section  : 14
type_def             : 20
type_list            : 19 20
type_section         : 10
type_spec            : 36 37 38 39 40 41 42 43 145 146
typed_var            : 129 130
typed_var_list       : 105 106 115 129

Parsing method: LALR

state 0

    (0) S' -> . rddl
    (1) rddl -> . rddl_block
    (2) rddl_block -> . rddl_block domain_block
    (3) rddl_block -> . rddl_block instance_block
    (4) rddl_block -> . rddl_block nonfluent_block
    (5) rddl_block -> . empty
    (207) empty -> .

    DOMAIN          reduce using rule 207 (empty -> .)
    INSTANCE        reduce using rule 207 (empty -> .)
    NON_FLUENTS     reduce using rule 207 (empty -> .)
    $end            reduce using rule 207 (empty -> .)

    rddl                           shift and go to state 1
    rddl_block                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> rddl .



state 2

    (1) rddl -> rddl_block .
    (2) rddl_block -> rddl_block . domain_block
    (3) rddl_block -> rddl_block . instance_block
    (4) rddl_block -> rddl_block . nonfluent_block
    (6) domain_block -> . DOMAIN IDENT LCURLY req_section domain_list RCURLY
    (165) instance_block -> . INSTANCE IDENT LCURLY instance_list RCURLY
    (182) nonfluent_block -> . NON_FLUENTS IDENT LCURLY nonfluent_list RCURLY

    $end            reduce using rule 1 (rddl -> rddl_block .)
    DOMAIN          shift and go to state 7
    INSTANCE        shift and go to state 8
    NON_FLUENTS     shift and go to state 9

    domain_block                   shift and go to state 4
    instance_block                 shift and go to state 5
    nonfluent_block                shift and go to state 6

state 3

    (5) rddl_block -> empty .

    DOMAIN          reduce using rule 5 (rddl_block -> empty .)
    INSTANCE        reduce using rule 5 (rddl_block -> empty .)
    NON_FLUENTS     reduce using rule 5 (rddl_block -> empty .)
    $end            reduce using rule 5 (rddl_block -> empty .)


state 4

    (2) rddl_block -> rddl_block domain_block .

    DOMAIN          reduce using rule 2 (rddl_block -> rddl_block domain_block .)
    INSTANCE        reduce using rule 2 (rddl_block -> rddl_block domain_block .)
    NON_FLUENTS     reduce using rule 2 (rddl_block -> rddl_block domain_block .)
    $end            reduce using rule 2 (rddl_block -> rddl_block domain_block .)


state 5

    (3) rddl_block -> rddl_block instance_block .

    DOMAIN          reduce using rule 3 (rddl_block -> rddl_block instance_block .)
    INSTANCE        reduce using rule 3 (rddl_block -> rddl_block instance_block .)
    NON_FLUENTS     reduce using rule 3 (rddl_block -> rddl_block instance_block .)
    $end            reduce using rule 3 (rddl_block -> rddl_block instance_block .)


state 6

    (4) rddl_block -> rddl_block nonfluent_block .

    DOMAIN          reduce using rule 4 (rddl_block -> rddl_block nonfluent_block .)
    INSTANCE        reduce using rule 4 (rddl_block -> rddl_block nonfluent_block .)
    NON_FLUENTS     reduce using rule 4 (rddl_block -> rddl_block nonfluent_block .)
    $end            reduce using rule 4 (rddl_block -> rddl_block nonfluent_block .)


state 7

    (6) domain_block -> DOMAIN . IDENT LCURLY req_section domain_list RCURLY

    IDENT           shift and go to state 10


state 8

    (165) instance_block -> INSTANCE . IDENT LCURLY instance_list RCURLY

    IDENT           shift and go to state 11


state 9

    (182) nonfluent_block -> NON_FLUENTS . IDENT LCURLY nonfluent_list RCURLY

    IDENT           shift and go to state 12


state 10

    (6) domain_block -> DOMAIN IDENT . LCURLY req_section domain_list RCURLY

    LCURLY          shift and go to state 13


state 11

    (165) instance_block -> INSTANCE IDENT . LCURLY instance_list RCURLY

    LCURLY          shift and go to state 14


state 12

    (182) nonfluent_block -> NON_FLUENTS IDENT . LCURLY nonfluent_list RCURLY

    LCURLY          shift and go to state 15


state 13

    (6) domain_block -> DOMAIN IDENT LCURLY . req_section domain_list RCURLY
    (7) req_section -> . REQUIREMENTS ASSIGN_EQUAL LCURLY string_list RCURLY SEMI
    (8) req_section -> . REQUIREMENTS LCURLY string_list RCURLY SEMI
    (9) req_section -> . empty
    (207) empty -> .

    REQUIREMENTS    shift and go to state 17
    RCURLY          reduce using rule 207 (empty -> .)
    TYPES           reduce using rule 207 (empty -> .)
    PVARIABLES      reduce using rule 207 (empty -> .)
    REWARD          reduce using rule 207 (empty -> .)
    TERMINATION     reduce using rule 207 (empty -> .)
    ACTION_PRECONDITIONS reduce using rule 207 (empty -> .)
    STATE_ACTION_CONSTRAINTS reduce using rule 207 (empty -> .)
    STATE_INVARIANTS reduce using rule 207 (empty -> .)
    CPFS            reduce using rule 207 (empty -> .)
    CDFS            reduce using rule 207 (empty -> .)

    req_section                    shift and go to state 16
    empty                          shift and go to state 18

state 14

    (165) instance_block -> INSTANCE IDENT LCURLY . instance_list RCURLY
    (166) instance_list -> . instance_list domain_section
    (167) instance_list -> . instance_list nonfluents_section
    (168) instance_list -> . instance_list objects_section
    (169) instance_list -> . instance_list init_state_section
    (170) instance_list -> . instance_list max_nondef_actions_section
    (171) instance_list -> . instance_list horizon_spec_section
    (172) instance_list -> . instance_list discount_section
    (173) instance_list -> . empty
    (207) empty -> .

    RCURLY          reduce using rule 207 (empty -> .)
    DOMAIN          reduce using rule 207 (empty -> .)
    NON_FLUENTS     reduce using rule 207 (empty -> .)
    OBJECTS         reduce using rule 207 (empty -> .)
    INIT_STATE      reduce using rule 207 (empty -> .)
    MAX_NONDEF_ACTIONS reduce using rule 207 (empty -> .)
    HORIZON         reduce using rule 207 (empty -> .)
    DISCOUNT        reduce using rule 207 (empty -> .)

    instance_list                  shift and go to state 19
    empty                          shift and go to state 20

state 15

    (182) nonfluent_block -> NON_FLUENTS IDENT LCURLY . nonfluent_list RCURLY
    (183) nonfluent_list -> . nonfluent_list domain_section
    (184) nonfluent_list -> . nonfluent_list objects_section
    (185) nonfluent_list -> . nonfluent_list init_non_fluent_section
    (186) nonfluent_list -> . empty
    (207) empty -> .

    RCURLY          reduce using rule 207 (empty -> .)
    DOMAIN          reduce using rule 207 (empty -> .)
    OBJECTS         reduce using rule 207 (empty -> .)
    NON_FLUENTS     reduce using rule 207 (empty -> .)

    nonfluent_list                 shift and go to state 21
    empty                          shift and go to state 22

state 16

    (6) domain_block -> DOMAIN IDENT LCURLY req_section . domain_list RCURLY
    (10) domain_list -> . domain_list type_section
    (11) domain_list -> . domain_list pvar_section
    (12) domain_list -> . domain_list cpf_section
    (13) domain_list -> . domain_list reward_section
    (14) domain_list -> . domain_list termination_section
    (15) domain_list -> . domain_list action_precond_section
    (16) domain_list -> . domain_list state_action_constraint_section
    (17) domain_list -> . domain_list state_invariant_section
    (18) domain_list -> . empty
    (207) empty -> .

    RCURLY          reduce using rule 207 (empty -> .)
    TYPES           reduce using rule 207 (empty -> .)
    PVARIABLES      reduce using rule 207 (empty -> .)
    REWARD          reduce using rule 207 (empty -> .)
    TERMINATION     reduce using rule 207 (empty -> .)
    ACTION_PRECONDITIONS reduce using rule 207 (empty -> .)
    STATE_ACTION_CONSTRAINTS reduce using rule 207 (empty -> .)
    STATE_INVARIANTS reduce using rule 207 (empty -> .)
    CPFS            reduce using rule 207 (empty -> .)
    CDFS            reduce using rule 207 (empty -> .)

    domain_list                    shift and go to state 23
    empty                          shift and go to state 24

state 17

    (7) req_section -> REQUIREMENTS . ASSIGN_EQUAL LCURLY string_list RCURLY SEMI
    (8) req_section -> REQUIREMENTS . LCURLY string_list RCURLY SEMI

    ASSIGN_EQUAL    shift and go to state 25
    LCURLY          shift and go to state 26


state 18

    (9) req_section -> empty .

    RCURLY          reduce using rule 9 (req_section -> empty .)
    TYPES           reduce using rule 9 (req_section -> empty .)
    PVARIABLES      reduce using rule 9 (req_section -> empty .)
    REWARD          reduce using rule 9 (req_section -> empty .)
    TERMINATION     reduce using rule 9 (req_section -> empty .)
    ACTION_PRECONDITIONS reduce using rule 9 (req_section -> empty .)
    STATE_ACTION_CONSTRAINTS reduce using rule 9 (req_section -> empty .)
    STATE_INVARIANTS reduce using rule 9 (req_section -> empty .)
    CPFS            reduce using rule 9 (req_section -> empty .)
    CDFS            reduce using rule 9 (req_section -> empty .)


state 19

    (165) instance_block -> INSTANCE IDENT LCURLY instance_list . RCURLY
    (166) instance_list -> instance_list . domain_section
    (167) instance_list -> instance_list . nonfluents_section
    (168) instance_list -> instance_list . objects_section
    (169) instance_list -> instance_list . init_state_section
    (170) instance_list -> instance_list . max_nondef_actions_section
    (171) instance_list -> instance_list . horizon_spec_section
    (172) instance_list -> instance_list . discount_section
    (174) domain_section -> . DOMAIN ASSIGN_EQUAL IDENT SEMI
    (175) nonfluents_section -> . NON_FLUENTS ASSIGN_EQUAL IDENT SEMI
    (176) objects_section -> . OBJECTS LCURLY objects_list RCURLY SEMI
    (177) init_state_section -> . INIT_STATE LCURLY pvar_inst_list RCURLY SEMI
    (178) max_nondef_actions_section -> . MAX_NONDEF_ACTIONS ASSIGN_EQUAL pos_int_type_or_pos_inf SEMI
    (179) horizon_spec_section -> . HORIZON ASSIGN_EQUAL pos_int_type_or_pos_inf SEMI
    (180) horizon_spec_section -> . HORIZON ASSIGN_EQUAL TERMINATE_WHEN LPAREN expr RPAREN
    (181) discount_section -> . DISCOUNT ASSIGN_EQUAL DOUBLE SEMI

    RCURLY          shift and go to state 27
    DOMAIN          shift and go to state 35
    NON_FLUENTS     shift and go to state 36
    OBJECTS         shift and go to state 37
    INIT_STATE      shift and go to state 38
    MAX_NONDEF_ACTIONS shift and go to state 39
    HORIZON         shift and go to state 40
    DISCOUNT        shift and go to state 41

    domain_section                 shift and go to state 28
    nonfluents_section             shift and go to state 29
    objects_section                shift and go to state 30
    init_state_section             shift and go to state 31
    max_nondef_actions_section     shift and go to state 32
    horizon_spec_section           shift and go to state 33
    discount_section               shift and go to state 34

state 20

    (173) instance_list -> empty .

    RCURLY          reduce using rule 173 (instance_list -> empty .)
    DOMAIN          reduce using rule 173 (instance_list -> empty .)
    NON_FLUENTS     reduce using rule 173 (instance_list -> empty .)
    OBJECTS         reduce using rule 173 (instance_list -> empty .)
    INIT_STATE      reduce using rule 173 (instance_list -> empty .)
    MAX_NONDEF_ACTIONS reduce using rule 173 (instance_list -> empty .)
    HORIZON         reduce using rule 173 (instance_list -> empty .)
    DISCOUNT        reduce using rule 173 (instance_list -> empty .)


state 21

    (182) nonfluent_block -> NON_FLUENTS IDENT LCURLY nonfluent_list . RCURLY
    (183) nonfluent_list -> nonfluent_list . domain_section
    (184) nonfluent_list -> nonfluent_list . objects_section
    (185) nonfluent_list -> nonfluent_list . init_non_fluent_section
    (174) domain_section -> . DOMAIN ASSIGN_EQUAL IDENT SEMI
    (176) objects_section -> . OBJECTS LCURLY objects_list RCURLY SEMI
    (187) init_non_fluent_section -> . NON_FLUENTS LCURLY pvar_inst_list RCURLY SEMI

    RCURLY          shift and go to state 43
    DOMAIN          shift and go to state 35
    OBJECTS         shift and go to state 37
    NON_FLUENTS     shift and go to state 42

    domain_section                 shift and go to state 44
    objects_section                shift and go to state 45
    init_non_fluent_section        shift and go to state 46

state 22

    (186) nonfluent_list -> empty .

    RCURLY          reduce using rule 186 (nonfluent_list -> empty .)
    DOMAIN          reduce using rule 186 (nonfluent_list -> empty .)
    OBJECTS         reduce using rule 186 (nonfluent_list -> empty .)
    NON_FLUENTS     reduce using rule 186 (nonfluent_list -> empty .)


state 23
